--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         <div id="publisher"></div>
     </div>
 
+    <div id="textchat">
+        <p id="history"></p>
+        <form>
+             <input type="text" placeholder="Input your text here" id="msgTxt"></input>
+        </form>
+   </div>
+
     <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
